--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: c
+sudo: required
+install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
 script: bash build.sh
 os: linux
